manifests/ingester/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingester
  labels:
    app: ingester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingester
  template:
    metadata:
      labels:
        app: ingester
    spec:
      containers:
        - name: ingester
          image: ghcr.io/sverdejot/beacon/ingester:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
